RESOLVED FIXED Bug 104458
[EFL] [WebGL] Path is not resized correctly
https://bugs.webkit.org/show_bug.cgi?id=104458
Summary [EFL] [WebGL] Path is not resized correctly
Kalyan
Reported 2012-12-08 15:37:51 PST
In GraphicsContext3D::paintToCanvas , we flip the contents and draw on the surface. The operations needed to flip the image(translation and scale ) are done before the rectangle with correct size is added to current path. This results in drawing pixels at wrong position. We could also combine the translation and scale operations into one by using matrix.
Attachments
patch (2.20 KB, patch)
2012-12-08 16:10 PST, Kalyan
kenneth: review+
kenneth: commit-queue-
patchv2 (2.21 KB, patch)
2012-12-09 13:59 PST, Kalyan
no flags
Kalyan
Comment 1 2012-12-08 15:41:31 PST
(In reply to comment #0) > In GraphicsContext3D::paintToCanvas , we flip the contents and draw on the surface. The operations needed to flip the image(translation and scale ) are done before the rectangle with correct size is added to current path. This results in drawing pixels at wrong position. > > We could also combine the translation and scale operations into one by using matrix. Problem can be seen with LayoutTests/fast/canvas/webgl/canvas-test.html
Kalyan
Comment 2 2012-12-08 16:10:29 PST
Kenneth Rohde Christiansen
Comment 3 2012-12-09 06:34:27 PST
Comment on attachment 178383 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=178383&action=review > Source/WebCore/ChangeLog:9 > + The operations done to flip the image (translation and scale ) are done before rectangle with correct size remove space before ) > Source/WebCore/ChangeLog:10 > + is added to current path. This results in updating pixels at wrong positions. . Remove the trailing " ."
Kalyan
Comment 4 2012-12-09 13:59:35 PST
Created attachment 178436 [details] patchv2 review changes
WebKit Review Bot
Comment 5 2012-12-09 14:57:49 PST
Comment on attachment 178436 [details] patchv2 Clearing flags on attachment: 178436 Committed r137098: <http://trac.webkit.org/changeset/137098>
WebKit Review Bot
Comment 6 2012-12-09 14:57:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.