[EFL] [WebGL] Path is not resized correctly. https://bugs.webkit.org/show_bug.cgi?id=104458.

Patch by Kondapally Kalyan <kalyan.kondapally@intel.com> on 2012-12-09
Reviewed by Kenneth Rohde Christiansen.

In GraphicsContext3D::paintToCanvas, we flip the contents and draw on the surface.
The operations done to flip the image (translation and scale) are done before rectangle with correct size
is added to current path. This resulted in updating pixels at wrong positions.

Covered by existing tests.

* platform/graphics/efl/GraphicsContext3DEfl.cpp:
(WebCore::GraphicsContext3D::paintToCanvas):

Canonical link: https://commits.webkit.org/122659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137098 268f45cc-cd09-0410-ab3c-d52691b4dbfc